package logica.exception;

public class ExcepcionAtravesarPiezas extends ExcepcionAjedrez {
    public ExcepcionAtravesarPiezas(String mensaje) {
        super(mensaje);
    }
}
