package logica.exception;

public class ExcepcionAutoAtaque extends ExcepcionMinimaDeMovimiento {
    public ExcepcionAutoAtaque(String mensaje) {
        super(mensaje);
    }
}
