package logica.exception;

public class ExcepcionEnMovimiento extends ExcepcionAjedrez {
    public ExcepcionEnMovimiento(String message) {
        super(message);
    }
}
