package logica.exception;

public class ExcepcionEnMovimientoDiagonal extends ExcepcionEnMovimiento {
    public ExcepcionEnMovimientoDiagonal(String message) {
        super(message);
    }
}
